--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,7 +96,9 @@ header {
 .heading h2 {
   font-weight: normal;
 }
-
+.heading h2 em {
+  color: red;
+}
 .custom {
   float: left;
   width: 25%;
@@ -106,7 +108,8 @@ header {
   position: relative;
 }
 .custom-icon img {
-  margin:auto;
+  margin: 5px;
+  width: 100%;
 }
 .custom-icon p a {
   color: black;
@@ -140,16 +143,39 @@ header {
   box-shadow: none;
 }
 
+.contact-form {
+  padding-top: 100px;
+  margin-left: 25px;
+}
+.contact-form h3 {
+  margin-bottom: 5px;
+  margin-top: 5px
+}
+input, textarea {
+  width:400px;
+  margin-top:10px;
+  margin-bottom:30px;
+  padding:20px;
+  font-size:18px;
+  border: solid 1px #dee7ec;
+}
+.contact-submit{
+  background-color:#dee7ec;
+  color:#889eab;
+}
 footer img {
   width: 125px;
 }
 
 footer p {
   color: #b3aeb5;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 footer {
-  padding-top: 30px;
-  padding-bottom: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-top: 1px solid #eee;
+  background-color: #2f5167;
+  width: 100%
 }
